# wgpu-examples

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.rs
src/types/: State.rs  camera.rs  colored_vertex.rs  mod.rs  polygon_buffer.rs  textured_vertex.rs  vertex.rs
src/types/camera_types/: camera.rs  camera_controller.rs  camera_uniform.rs  mod.rs
src/types/resources/: challenge_3.wgsl
src/types/vertex_types/: colored_vertex.rs  mod.rs  textured_vertex.rs
