[package]
name = "wgpu_ex"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1"
env_logger = "0.10"
log = "0.4"
wgpu = "24.0"
pollster = "0.3"
anyhow = "1.0"
cgmath = "0.18"

[dependencies.winit]
version = "0.29"
features = [ "rwh_05" ]

[dependencies.bytemuck]
version = "1.16"
features = [ "derive" ]

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}